--- a/singolo1.css
+++ b/singolo1.css
@@ -60,3 +60,104 @@ h1 span{
 .navigation a:hover{
     color: #f06c64;
 }
+.slider{
+    border-bottom: 5px solid #ea676b;
+    background-color: #f06c64;
+    height: 600px;
+}
+.slider-container{
+    display: flex;
+    justify-content: space-between;
+    height: 586px;
+    align-items: center;
+}
+.image-1{
+    padding-right:73px ;
+}
+.arrow{
+    width: 27px;
+    height: 100%;
+    
+}
+.arrow:hover{
+    background-color: #ce5e57;
+}
+.arrow img{
+    padding-top: 280px;
+}
+.arrow-right{
+    padding-left:10px ;
+    padding-right:10px;
+}
+.image-container{
+    width: 795px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.services {
+  height: 500px;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+.title {
+    margin: 0;
+    padding-top: 59px;
+    font-size: 30px;
+    letter-spacing: -0.2px;
+    font-weight: 900;
+    color: #666d89;
+    padding-left: 10px;
+}
+.description1 {
+    margin-bottom: 43px;
+    font-size:18px;
+    letter-spacing: -0.23px;
+    line-height: 30px;
+    color: #767e9e;
+    padding-left: 10px;
+    padding-top: 17px;
+}
+  
+.layout {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+  
+.service1 {
+    display: flex;
+    justify-content: space-between;
+    width: 312px;
+    margin-bottom: 27px;
+    margin-left: -3px;
+}
+  
+.icon {
+    width: 59px;
+    height: 63px;
+    padding-top: 4px;
+}
+  
+.content {
+    width: 226px;
+
+}
+  
+.name {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 900;
+    color: #666d89;
+}
+  
+.description {
+    margin: 8px 0 0;
+    height: 66px;
+    font-size: 12px;
+    letter-spacing: 0.562px;
+    line-height: 22px;
+    overflow: hidden;
+    color: #767e9e;
+    text-align: justify;
+}  
