--- a/singolo2.css
+++ b/singolo2.css
@@ -68,3 +68,77 @@ body{
 .images__items{
     margin-bottom: 2rem;
 }
+.about-us{
+    background-color: #f2f2f2;
+    height: 73.5rem;
+    padding-top: 6rem;
+    color:#666d89;
+    border-bottom: 6px solid #fff;
+}
+.about-us__title{
+    font-size: 3rem;
+    font-weight: 900;
+    letter-spacing: -0.01rem;
+    margin-bottom: 2rem;
+}
+.about-us__subTitle{
+    font-size: 1.8rem;
+    margin-bottom: 4.5rem;
+    line-height: 2.9rem;
+    font-weight: 300;
+    word-spacing: 0.11rem;
+
+}
+.peoples{
+    display: flex;
+}
+.person1{
+    margin-right: 2rem;
+
+}
+.person2{
+    margin-right: 2rem;
+
+}
+.peoples__item img{
+    margin-bottom: 1.2rem;
+}
+.person__name{
+    font-size: 1.8rem;
+    font-weight: 900;
+    letter-spacing: -0.02rem;
+    margin-bottom: 1rem;
+}
+.person__description{
+    font-size: 1.2rem;
+    line-height: 2rem;
+    font-weight: 400;
+    margin-bottom: 2.4rem;
+}
+.social{
+    display: flex;
+}
+.social__item{
+    width: 32px;
+    height: 32px;
+    background-image: url('assets/img/sprait.png');
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    margin-right: 0.8rem;
+}
+.social__item:hover{
+    cursor: pointer;
+    background-color: #c5c5c5;
+}
+.social__facebook{
+    background-position:  0px 0px;
+}
+.social__gmail{
+    background-position:  -40px 0px;
+}
+.social__twitter{
+    background-position:  -80px 0px;
+}
+.social__in{
+    background-position:  -120px 0px;
+}
