--- a/singolo1.css
+++ b/singolo1.css
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: "Lato";
+  src: local("Lato Black"), local("Lato-Black"), 
+    url("../assets/fonts/Lato-Black.ttf") format("truetype");
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: local("Lato Bold"), local("Lato-Bold"), 
+    url("../assets/fonts/Lato-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: local("Lato Regular"), local("Lato-Regular"), 
+    url("../assets/fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: local("Lato Light"), local("Lato-Light"), 
+    url("../assets/fonts/Lato-Light.ttf") format("truetype");
+  font-weight: 300;
+}
 *{
   box-sizing: border-box;  
   padding: 0;
@@ -7,7 +34,7 @@ body{
     
     font-family: 'Lato', sans-serif;
 }
-.container{
+.container-1{
     width: 960px;
     margin: 0 auto;
 }
@@ -105,7 +132,7 @@ h1 span{
     padding-top: 59px;
     font-size: 30px;
     letter-spacing: -0.2px;
-    font-weight: 900;
+    font-weight: 700;
     color: #666d89;
     padding-left: 10px;
 }
