--- a/style.css
+++ b/style.css
@@ -391,13 +391,14 @@ body{
     border-radius: 0.5rem;
     font-family: 'Lato', sans-serif;
 }
-.form-item__items:not(:last-child){
+.form-item__items:not(:nth-child(4)){
     margin-bottom: 1.7rem;
     height: 3.8rem;
 }
-.form-item__items:last-child{
+.form-item__items:nth-child(4){
     height: 20rem;
     padding-top: 1rem;
+    margin-bottom: 2rem;
 }
 .contact{
     width: 30rem;
@@ -481,3 +482,13 @@ footer{
 .social__in{
     background-position:  -121px -1px;
 }
+
+button{
+    width: 20rem;
+    height: 3rem;
+    background-color: #2d303a;
+    display: block;
+    border: none;
+    color: #c5c5c5;
+}
+
