--- a/style.css
+++ b/style.css
@@ -38,12 +38,17 @@
       width: 960px;
       margin: 0 auto;
   }
-  header{
+  header{ 
+      width: 100%;
+      margin: 0 auto;
       height: 96px;
       background-color:#2d303a ;
       border-bottom: 6px solid #323746;
+      position: fixed;
+      z-index: 2;
   }
   .head-block{
+
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -76,6 +81,7 @@
       font-size: 12px;
       font-weight: 700;
       letter-spacing:-0.2px;
+      transition: all 0.3s ease-in-out;
   }
   .navigation a:not(:first-child)::before {
       content: "\2219";
@@ -84,13 +90,25 @@
       line-height: 1px;
       color: #494e62;
   }
-  .navigation a:hover{
+  /* .navigation a:hover{
       color: #f06c64;
+  } */
+  .navigation .active{
+    color: #f06c64;
   }
   .slider{
       border-bottom: 5px solid #ea676b;
       background-color: #f06c64;
-      height: 600px;
+      height: 696px;
+      position: relative;
+      padding-top: 96px;
+  }
+  .bg-red{
+    background-color: #f06c64;
+  }
+  .bg-blue{
+    background-color: #648BF0;
+    border-bottom: 5px solid rgb(96, 134, 230);
   }
   .slider-container{
       display: flex;
@@ -104,10 +122,10 @@
   .arrow{
       width: 27px;
       height: 100%;
-      
+      transition: all 0.3s ease-in-out;
   }
   .arrow:hover{
-      background-color: #ce5e57;
+      background-color: #d4d4d41e;
   }
   .arrow img{
       padding-top: 280px;
@@ -121,6 +139,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      
+  }
+  .image-container img{
+      margin: 0 auto;
   }
   .services {
     height: 499px;
@@ -249,6 +271,7 @@ body{
     display: inline-block;
     margin-right: 0.6rem;
     word-spacing: -0.1rem;
+    transition: all 0.3s ease-in-out;
 }
 
 .navigation-image__items,
@@ -258,6 +281,11 @@ body{
 }
 .navigation-image__items:hover,
 .navigation-image__items:active{
+    /* color:#c5c5c5;
+    border-color: #c5c5c5; */
+    cursor: pointer;
+} 
+.selected{
     color:#c5c5c5;
     border-color: #c5c5c5;
 }
@@ -265,12 +293,21 @@ body{
 .portfolio__images{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    height: 60rem;
+    justify-content: space-around;
+    height: 62rem;
     overflow: hidden;
+    padding-top: 0.7rem;
+    
 }
 .images__items{
     margin-bottom: 2rem;
+    transition: all 0.3s ease-in-out;
+}
+.images__items:hover{
+    cursor: pointer;
+}
+.bordered{
+    box-shadow: 0 0 0 10px #F06C64;
 }
 .about-us{
     background-color: #f2f2f2;
@@ -315,6 +352,7 @@ body{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
 }
 .person__description{
     font-size: 1.2rem;
@@ -435,14 +473,13 @@ body{
     text-decoration: none;
     color:#f0d8d9 ;
 }
-.contact-container__item .icons{
+.contact-container__item i{
     margin-right: 1rem;
     width: 1.2rem;
     text-align: center;
 }
 .contact-container__item{
-    margin-bottom: 0.2rem;
-    display: flex;
+    margin-bottom: 0.8rem;
 }
 footer{
     height: 7.5rem;
@@ -503,16 +540,4 @@ button{
 button:hover{
     background-color: #494e62;
 }
-.icons{
-    width: 1.3rem;
-    height: 2rem;
-}
-.icons1{
-    background: url('assets/img/icons.png') no-repeat 1px 1px;
-}
-.icons2{
-        background: url('assets/img/icons.png') no-repeat 1px -20px;
-}
-.icons3{
-    background: url('assets/img/icons.png') no-repeat 1px -42px;
-}
+
